feat: Improve the watcher logic

--- a/charts/kubemox/templates/role.yaml
+++ b/charts/kubemox/templates/role.yaml
@@ -22,6 +22,9 @@ rules:
   - "virtualmachinesnapshotpolicies"
   - "virtualmachinesnapshotpolicies/finalizers"
   - "virtualmachinesnapshotpolicies/status"
+  - "virtualmachinetemplates"
+  - "virtualmachinetemplates/finalizers"
+  - "virtualmachinetemplates/status"
   - "containers"
   - "containers/finalizers"
   - "containers/status"
