--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.17.0
   name: virtualmachines.proxmox.alperen.cloud
 spec:
   group: proxmox.alperen.cloud
@@ -14,7 +14,7 @@ spec:
     shortNames:
     - vm
     singular: virtualmachine
-  scope: Namespaced
+  scope: Cluster
   versions:
   - additionalPrinterColumns:
     - description: The node name
@@ -50,46 +50,60 @@ spec:
         description: VirtualMachine is the Schema for the virtualmachines API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
           ownerReferences:
             items:
-              description: OwnerReference contains enough information to let you identify
-                an owning object. An owning object must be in the same namespace as
-                the dependent, or be cluster-scoped, so there is no namespace field.
+              description: |-
+                OwnerReference contains enough information to let you identify an owning
+                object. An owning object must be in the same namespace as the dependent, or
+                be cluster-scoped, so there is no namespace field.
               properties:
                 apiVersion:
                   description: API version of the referent.
                   type: string
                 blockOwnerDeletion:
-                  description: If true, AND if the owner has the "foregroundDeletion"
-                    finalizer, then the owner cannot be deleted from the key-value
-                    store until this reference is removed. See https://kubernetes.io/docs/concepts/architecture/garbage-collection/#foreground-deletion
-                    for how the garbage collector interacts with this field and enforces
-                    the foreground deletion. Defaults to false. To set this field,
-                    a user needs "delete" permission of the owner, otherwise 422 (Unprocessable
-                    Entity) will be returned.
+                  description: |-
+                    If true, AND if the owner has the "foregroundDeletion" finalizer, then
+                    the owner cannot be deleted from the key-value store until this
+                    reference is removed.
+                    See https://kubernetes.io/docs/concepts/architecture/garbage-collection/#foreground-deletion
+                    for how the garbage collector interacts with this field and enforces the foreground deletion.
+                    Defaults to false.
+                    To set this field, a user needs "delete" permission of the owner,
+                    otherwise 422 (Unprocessable Entity) will be returned.
                   type: boolean
                 controller:
                   description: If true, this reference points to the managing controller.
                   type: boolean
                 kind:
-                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                  description: |-
+                    Kind of the referent.
+                    More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
                   type: string
                 name:
-                  description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names#names'
+                  description: |-
+                    Name of the referent.
+                    More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names#names
                   type: string
                 uid:
-                  description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names#uids'
+                  description: |-
+                    UID of the referent.
+                    More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names#uids
                   type: string
               required:
               - apiVersion
@@ -110,17 +124,17 @@ spec:
                 type: object
               deletionProtection:
                 default: false
-                description: DeletionProtection is a flag that indicates whether the
-                  VM should be protected from deletion. If true, the VM will not be
-                  deleted when the Kubernetes resource is deleted. If not set, it
-                  defaults to false.
+                description: |-
+                  DeletionProtection is a flag that indicates whether the VM should be protected from deletion.
+                  If true, the VM will not be deleted when the Kubernetes resource is deleted.
+                  If not set, it defaults to false.
                 type: boolean
               enableAutoStart:
                 default: true
-                description: EnableAutoStart is a flag that indicates whether the
-                  VM should automatically start when it's powered off. If true, the
-                  VM will start automatically when it's powered off. If not set, it
-                  defaults to true.
+                description: |-
+                  EnableAutoStart is a flag that indicates whether the VM should automatically start when it's powered off.
+                  If true, the VM will start automatically when it's powered off.
+                  If not set, it defaults to true.
                 type: boolean
               name:
                 description: Name is the name of the VM
@@ -192,10 +206,8 @@ spec:
                             the device is the primary GPU ==> x-vga=1
                           type: boolean
                         type:
-                          description: 'Type is the type of the PCI device either
-                            raw or mapped TODO: Add validation for that one to immutable
-                            and make sure that you can''t set PCIE to true if the
-                            type is mapped'
+                          description: Type is the type of the PCI device either raw
+                            or mapped
                           enum:
                           - raw
                           - mapped
@@ -254,21 +266,23 @@ spec:
                             type: string
                         type: object
                       password:
-                        description: Password is the password for the template. Use
-                          this field to specify the password directly.
+                        description: |-
+                          Password is the password for the template.
+                          Use this field to specify the password directly.
                         type: string
                       passwordFrom:
-                        description: PasswordFrom is a reference to a key in a Secret
-                          that contains the password. Use this field to specify the
-                          password via a Secret.
+                        description: |-
+                          PasswordFrom is a reference to a key in a Secret that contains the password.
+                          Use this field to specify the password via a Secret.
                         properties:
                           key:
                             description: The key of the secret to select from.  Must
                               be a valid secret key.
                             type: string
                           name:
-                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            description: |-
+                              Name of the referent.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                             type: string
                           optional:
                             description: Specify whether the Secret or its key must
@@ -361,10 +375,8 @@ spec:
                             the device is the primary GPU ==> x-vga=1
                           type: boolean
                         type:
-                          description: 'Type is the type of the PCI device either
-                            raw or mapped TODO: Add validation for that one to immutable
-                            and make sure that you can''t set PCIE to true if the
-                            type is mapped'
+                          description: Type is the type of the PCI device either raw
+                            or mapped
                           enum:
                           - raw
                           - mapped
@@ -387,43 +399,35 @@ spec:
               conditions:
                 description: Conditions is the metav1.Condition of the Virtual Machine
                 items:
-                  description: "Condition contains details for one aspect of the current
-                    state of this API Resource. --- This struct is intended for direct
-                    use as an array at the field path .status.conditions.  For example,
-                    \n type FooStatus struct{ // Represents the observations of a
-                    foo's current state. // Known .status.conditions.type are: \"Available\",
-                    \"Progressing\", and \"Degraded\" // +patchMergeKey=type // +patchStrategy=merge
-                    // +listType=map // +listMapKey=type Conditions []metav1.Condition
-                    `json:\"conditions,omitempty\" patchStrategy:\"merge\" patchMergeKey:\"type\"
-                    protobuf:\"bytes,1,rep,name=conditions\"` \n // other fields }"
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
                   properties:
                     lastTransitionTime:
-                      description: lastTransitionTime is the last time the condition
-                        transitioned from one status to another. This should be when
-                        the underlying condition changed.  If that is not known, then
-                        using the time when the API field changed is acceptable.
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
                       format: date-time
                       type: string
                     message:
-                      description: message is a human readable message indicating
-                        details about the transition. This may be an empty string.
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
                       maxLength: 32768
                       type: string
                     observedGeneration:
-                      description: observedGeneration represents the .metadata.generation
-                        that the condition was set based upon. For instance, if .metadata.generation
-                        is currently 12, but the .status.conditions[x].observedGeneration
-                        is 9, the condition is out of date with respect to the current
-                        state of the instance.
+                      description: |-
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
                       format: int64
                       minimum: 0
                       type: integer
                     reason:
-                      description: reason contains a programmatic identifier indicating
-                        the reason for the condition's last transition. Producers
-                        of specific condition types may define expected values and
-                        meanings for this field, and whether the values are considered
-                        a guaranteed API. The value should be a CamelCase string.
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
                         This field may not be empty.
                       maxLength: 1024
                       minLength: 1
@@ -438,10 +442,6 @@ spec:
                       type: string
                     type:
                       description: type of condition in CamelCase or in foo.example.com/CamelCase.
-                        --- Many .condition.type values are consistent across resources
-                        like Available, but because arbitrary conditions can be useful
-                        (see .node.status.conditions), the ability to deconflict is
-                        important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
                       maxLength: 316
                       pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
