chore: Add upgrading docs for breaking change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,9 @@ nav:
 - reconciliation-modes.md
 - contributing.md
 - roadmap.md
+- Upgrading:
+  - Overview: upgrading/index.md
+  - v0.3.0: upgrading/v0.3.0.md
 - Releases ⧉: https://github.com/alperencelik/kubemox/releases
 
 repo_url: https://github.com/alperencelik/kubemox 
