--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -20,7 +20,7 @@ jobs:
         run: helm lint charts/kubemox 
     
       - name: Test Helm Chart
-        run: helm install kubemox charts/kubemox --dry-run --debug 
+        run: helm template kubemox charts/kubemox --dry-run --debug 
 
       - name: Update Chart Version (Optional)
         run: |
