--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -20,6 +20,8 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- proxmox_proxmoxconnection_editor_role.yaml
+- proxmox_proxmoxconnection_viewer_role.yaml
 - proxmox_virtualmachinetemplate_editor_role.yaml
 - proxmox_virtualmachinetemplate_viewer_role.yaml
 
