--- a/charts/kubemox/templates/crds/virtualmachinetemplate.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinetemplate.yaml
@@ -71,6 +71,12 @@ spec:
           spec:
             description: VirtualMachineTemplateSpec defines the desired state of VirtualMachineTemplate
             properties:
+              additionalConfig:
+                additionalProperties:
+                  type: string
+                description: AdditionalConfig is the additional configuration of the
+                  VM
+                type: object
               cloudInitConfig:
                 description: Cloud Init Config
                 properties:
