--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinetemplates.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinetemplates.yaml
@@ -166,6 +166,18 @@ spec:
                 - message: Specify either password or passwordFrom, but not both
                   rule: (has(self.password) && !has(self.passwordFrom)) || (!has(self.password)
                     && has(self.passwordFrom)) || (!has(self.password) && !has(self.passwordFrom))
+              connectionRef:
+                description: |-
+                  LocalObjectReference contains enough information to let you locate the
+                  referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               deletionProtection:
                 default: false
                 type: boolean
@@ -179,6 +191,18 @@ spec:
                     type: string
                   compression:
                     type: string
+                  connectionRef:
+                    description: |-
+                      LocalObjectReference contains enough information to let you locate the
+                      referenced object inside the same namespace.
+                    properties:
+                      name:
+                        description: |-
+                          Name of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                        type: string
+                    type: object
+                    x-kubernetes-map-type: atomic
                   content:
                     pattern: \b(iso|vztmpl)\b
                     type: string
