--- a/config/crd/bases/proxmox.alperen.cloud_customcertificates.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_customcertificates.yaml
@@ -65,6 +65,18 @@ spec:
                       type: string
                     type: array
                 type: object
+              connectionRef:
+                description: |-
+                  LocalObjectReference contains enough information to let you locate the
+                  referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               nodeName:
                 description: |-
                   INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
