--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinesnapshots.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinesnapshots.yaml
@@ -40,6 +40,18 @@ spec:
           spec:
             description: VirtualMachineSnapshotSpec defines the desired state of VirtualMachineSnapshot
             properties:
+              connectionRef:
+                description: |-
+                  LocalObjectReference contains enough information to let you locate the
+                  referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               snapshotName:
                 description: Name of the snapshot
                 type: string
