--- a/charts/kubemox/templates/secret.yaml
+++ b/charts/kubemox/templates/secret.yaml
@@ -1,3 +1,5 @@
+{{/* Deprecated: Use ProxmoxConnection resource instead 
+{{- if .Values.proxmox.existingSecret }}
 {{- if not .Values.proxmox.existingSecret }}
 apiVersion: v1
 data:
@@ -17,3 +19,4 @@ kind: Secret
 metadata:
   name: proxmox-credentials
 {{- end }}
+*/}}
