--- a/charts/kubemox/templates/crds/virtualmachinesnapshotpolicies.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinesnapshotpolicies.yaml
@@ -38,6 +38,18 @@ spec:
             description: VirtualMachineSnapshotPolicySpec defines the desired state
               of VirtualMachineSnapshotPolicy
             properties:
+              connectionRef:
+                description: |-
+                  LocalObjectReference contains enough information to let you locate the
+                  referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               labelSelector:
                 description: |-
                   A label selector is a label query over a set of resources. The result of matchLabels and
