--- a/examples/virtualMachineTemplate.yaml
+++ b/examples/virtualMachineTemplate.yaml
@@ -6,6 +6,9 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: virtualmachinetemplate-sample
 spec:
+  connectionRef:
+    # Name of the ProxmoxConnection resource
+    name: proxmoxconnection-sample
   name: virtualmachinetemplate-sample
   node: lowtower
   imageConfig:
