--- a/examples/virtualmachineset.yaml
+++ b/examples/virtualmachineset.yaml
@@ -9,6 +9,9 @@ metadata:
     app.kubernetes.io/created-by: kubemox
   name: virtualmachineset-test
 spec:
+  connectionRef:
+    # Name of the ProxmoxConnection resource
+    name: proxmoxconnection-sample
   deletionProtection: false 
   enableAutoStart: false
   # Number of VMs to be created
