feat: Support multiple Proxmox instances (#55)
* feat: Impl proxmox connection object to support multiple instances

* Update connectionRef function and CRDs

* Add CEL validations for connectionRef

* Update helm chart and examples

--- a/examples/virtualmachineclone.yaml
+++ b/examples/virtualmachineclone.yaml
@@ -11,6 +11,9 @@ spec:
   deletionProtection: false
   # VM should be started any time found in stopped state
   enableAutoStart: true
+  connectionRef:
+    # Name of the ProxmoxConnection resource
+    name: proxmoxconnection-sample
   template:
     # Name of the template to be cloned
     name: fedora-template 
