--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
@@ -114,7 +114,6 @@ spec:
               x-kubernetes-map-type: atomic
             type: array
           spec:
-            description: VirtualMachineSpec defines the desired state of VirtualMachine
             properties:
               additionalConfig:
                 additionalProperties:
@@ -122,6 +121,21 @@ spec:
                 description: AdditionalConfig is the additional configuration of the
                   VM
                 type: object
+              connectionRef:
+                description: |-
+                  LocalObjectReference contains enough information to let you locate the
+                  referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: ConnectionRef is immutable
+                  rule: self == oldSelf
               deletionProtection:
                 default: false
                 description: |-
@@ -393,6 +407,9 @@ spec:
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
