--- a/config/crd/bases/proxmox.alperen.cloud_storagedownloadurls.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_storagedownloadurls.yaml
@@ -76,11 +76,15 @@ spec:
               verifyCertificate:
                 type: boolean
             required:
+            - connectionRef
             - content
             - filename
             - node
             - url
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: StorageDownloadURLStatus defines the observed state of StorageDownloadURL
             properties:
