fix: Add validation for connectionRef and storage name immutability for disk

--- a/charts/kubemox/templates/crds/containers.yaml
+++ b/charts/kubemox/templates/crds/containers.yaml
@@ -139,9 +139,13 @@ spec:
                     type: array
                 type: object
             required:
+            - connectionRef
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: ContainerStatus defines the observed state of Container
             properties:
