--- a/charts/kubemox/templates/crds/customcertificates.yaml
+++ b/charts/kubemox/templates/crds/customcertificates.yaml
@@ -1,9 +1,6 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.17.0
   name: customcertificates.proxmox.alperen.cloud
 spec:
   group: proxmox.alperen.cloud
@@ -95,7 +92,12 @@ spec:
                   restartProxy:
                     type: boolean
                 type: object
+            required:
+            - connectionRef
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: CustomCertificateStatus defines the observed state of CustomCertificate
             properties:
