--- a/charts/kubemox/templates/crds/managedvirtualmachines.yaml
+++ b/charts/kubemox/templates/crds/managedvirtualmachines.yaml
@@ -1,9 +1,6 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.17.0
   name: managedvirtualmachines.proxmox.alperen.cloud
 spec:
   group: proxmox.alperen.cloud
@@ -113,12 +110,16 @@ spec:
                   has exists
                 type: string
             required:
+            - connectionRef
             - cores
             - disk
             - memory
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
