--- a/charts/kubemox/templates/crds/virtualmachines.yaml
+++ b/charts/kubemox/templates/crds/virtualmachines.yaml
@@ -111,7 +111,6 @@ spec:
               x-kubernetes-map-type: atomic
             type: array
           spec:
-            description: VirtualMachineSpec defines the desired state of VirtualMachine
             properties:
               additionalConfig:
                 additionalProperties:
@@ -131,9 +130,6 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-                x-kubernetes-validations:
-                - message: ConnectionRef is immutable
-                  rule: self == oldSelf
               deletionProtection:
                 default: false
                 description: |-
@@ -173,6 +169,9 @@ spec:
                         storage:
                           description: Storage is the name of the storage
                           type: string
+                          x-kubernetes-validations:
+                          - message: storage is immutable
+                            rule: self.storage == oldSelf.storage
                       required:
                       - device
                       - size
@@ -337,6 +336,9 @@ spec:
                         storage:
                           description: Storage is the name of the storage
                           type: string
+                          x-kubernetes-validations:
+                          - message: storage is immutable
+                            rule: self.storage == oldSelf.storage
                       required:
                       - device
                       - size
@@ -402,9 +404,13 @@ spec:
                     type: integer
                 type: object
             required:
+            - connectionRef
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
