--- a/charts/kubemox/templates/crds/virtualmachinesets.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinesets.yaml
@@ -119,6 +119,9 @@ spec:
                         storage:
                           description: Storage is the name of the storage
                           type: string
+                          x-kubernetes-validations:
+                          - message: storage is immutable
+                            rule: self.storage == oldSelf.storage
                       required:
                       - device
                       - size
@@ -179,9 +182,13 @@ spec:
                     type: integer
                 type: object
             required:
+            - connectionRef
             - nodeName
             - replicas
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineSetStatus defines the observed state of VirtualMachineSet
             properties:
