--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
@@ -122,6 +122,9 @@ spec:
                         storage:
                           description: Storage is the name of the storage
                           type: string
+                          x-kubernetes-validations:
+                          - message: storage is immutable
+                            rule: self.storage == oldSelf.storage
                       required:
                       - device
                       - size
