Fix disk updates (#56)
* fix: Add validation for connectionRef and storage name immutability for disks

--- a/charts/kubemox/templates/crds/virtualmachinesets.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinesets.yaml
@@ -179,9 +179,13 @@ spec:
                     type: integer
                 type: object
             required:
+            - connectionRef
             - nodeName
             - replicas
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineSetStatus defines the observed state of VirtualMachineSet
             properties:
