--- a/charts/kubemox/templates/crds/virtualmachines.yaml
+++ b/charts/kubemox/templates/crds/virtualmachines.yaml
@@ -111,7 +111,6 @@ spec:
               x-kubernetes-map-type: atomic
             type: array
           spec:
-            description: VirtualMachineSpec defines the desired state of VirtualMachine
             properties:
               additionalConfig:
                 additionalProperties:
@@ -131,9 +130,6 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-                x-kubernetes-validations:
-                - message: ConnectionRef is immutable
-                  rule: self == oldSelf
               deletionProtection:
                 default: false
                 description: |-
@@ -402,9 +398,13 @@ spec:
                     type: integer
                 type: object
             required:
+            - connectionRef
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
